bugfix: fixed icon text getting cutoff and marquee container need more padding to keep icon items in view

--- a/main.css
+++ b/main.css
@@ -896,17 +896,18 @@ margin-bottom: 8px;
   overflow: hidden;
   position: relative;
   /* margin: 0 auto; */
-  padding: 10px;
+  padding: 20px 10px;
 }
 
 .marquee {
   display: flex;
   justify-content: center;
+  align-items: center;
   gap: 80px;
   white-space: nowrap;
-  animation: marquee-animation 20s linear infinite;
+  animation: marquee-animation 10s linear infinite;
   flex-shrink: 0;
-  padding: 0 20px;
+  padding:  20px;
   width: 100%;
 }
 
@@ -915,11 +916,10 @@ margin-bottom: 8px;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 100px;
+  width: 125px;
   max-height: 90px;
   border-radius: 10px;
   flex-shrink: 0;
-
 }
 
 .icon-item img {
@@ -936,7 +936,7 @@ margin-bottom: 8px;
   font-size: 15px;
   font-weight: 300;
   color: var(--color-medium-purple);
-  text-wrap: balance;
+  white-space: nowrap;
 }
 
 /* Animation for marquee */
